Finish bundling shell script within jar